--- a/src/main/webapp/WEB-INF/views/templates/admin/api/edit.vm
+++ b/src/main/webapp/WEB-INF/views/templates/admin/api/edit.vm
@@ -64,19 +64,19 @@
             </div>
             <div class="hr-line-dashed"></div>
             <div class="form-group"><label class="col-sm-3 control-label">Request Host</label>
-              <div class="col-sm-9"><input type="text" name="requestHost" class="form-control" value="$!{api.requestHost}">
+              <div class="col-sm-9"><input type="text" name="requestHost" class="form-control" value="$!{api.request_host}">
                 <span class="help-block m-b-none data-request_host"></span>
               </div>
             </div>
             <div class="hr-line-dashed"></div>
             <div class="form-group"><label class="col-sm-3 control-label">Request Path</label>
-              <div class="col-sm-9"><input type="text" name="requestPath" class="form-control" value="$!{api.requestPath}">
+              <div class="col-sm-9"><input type="text" name="requestPath" class="form-control" value="$!{api.request_path}">
                 <span class="help-block m-b-none data-request_path"></span>
               </div>
             </div>
             <div class="hr-line-dashed"></div>
             <div class="form-group"><label class="col-sm-3 control-label">Upstream Url</label>
-              <div class="col-sm-9"><input type="text" name="upstreamUrl" class="form-control" value="$!{api.upstreamUrl}">
+              <div class="col-sm-9"><input type="text" name="upstreamUrl" class="form-control" value="$!{api.upstream_url}">
                 <span class="help-block m-b-none data-upstream_url"></span></div>
             </div>
             <div class="hr-line-dashed"></div>
@@ -86,12 +86,12 @@
                 <div class="row">
                   <div class="col-sm-6">
                     <label class="checkbox-inline">
-                      <input class="i-checks" type="checkbox" value="true" name="stripRequestPath" #if ( $api.stripRequestPath ) checked #end> Strip request path
+                      <input class="i-checks" type="checkbox" value="true" name="stripRequestPath" #if ( $api.strip_request_path ) checked #end> Strip request path
                     </label>
                   </div>
                   <div class="col-sm-6">
                     <label class="checkbox-inline">
-                      <input class="i-checks" type="checkbox" value="true" name="preserveHost" #if ( $api.preserveHost ) checked #end> Preserve host
+                      <input class="i-checks" type="checkbox" value="true" name="preserveHost" #if ( $api.preserve_host ) checked #end> Preserve host
                     </label>
                   </div>
                 </div>
