--- a/src/main/webapp/WEB-INF/views/templates/admin/plugin/oauth2.vm
+++ b/src/main/webapp/WEB-INF/views/templates/admin/plugin/oauth2.vm
@@ -1,6 +1,6 @@
 #set( $pageTitle = "OAuth2 插件配置" )
 #set( $parentMenu = "plugin" )
-#set( $menuName = "" )
+#set( $menuName = "editPlugin" )
 
 #set( $pageStyles = [
   "/assets/vendor/ladda/ladda-themeless.min.css",
