GATE-7 登录页面完善, 添加详细报错, 登录参数完善.

--- a/src/main/webapp/WEB-INF/views/templates/oauth2/authorize.vm
+++ b/src/main/webapp/WEB-INF/views/templates/oauth2/authorize.vm
@@ -48,6 +48,7 @@
       <form accept-charset="UTF-8" action="${rc.contextPath}/oauth2/authorize" method="post">
         <div style="margin:0;padding:0;display:inline">
           <input type="hidden" name="client_id" value="$!request.getParameter("client_id")"> ## 这里用此法取地址栏参数
+          <input type="hidden" name="api_name" value="$!request.getParameter("api_name")">
           <input type="hidden" name="scopes" value="$!request.getParameter("scopes")">
         </div>
         <div class="auth-form-header">
