--- a/src/main/webapp/WEB-INF/views/templates/oauth2/authorize.vm
+++ b/src/main/webapp/WEB-INF/views/templates/oauth2/authorize.vm
@@ -49,7 +49,7 @@
         <div style="margin:0;padding:0;display:inline">
           <input type="hidden" name="client_id" value="$!request.getParameter("client_id")"> ## 这里用此法取地址栏参数
           <input type="hidden" name="api_name" value="$!request.getParameter("api_name")">
-          <input type="hidden" name="scopes" value="$!request.getParameter("scopes")">
+          <input type="hidden" name="scope" value="$!request.getParameter("scope")">
         </div>
         <div class="auth-form-header">
           <h1>OneAPM 用户登录</h1>
