--- a/src/main/webapp/WEB-INF/views/templates/admin/consumer/edit.vm
+++ b/src/main/webapp/WEB-INF/views/templates/admin/consumer/edit.vm
@@ -60,7 +60,7 @@
             </div>
             <div class="hr-line-dashed"></div>
             <div class="form-group"><label class="col-sm-3 control-label">Customer Id</label>
-              <div class="col-sm-9"><input type="text" name="customId" class="form-control"
+              <div class="col-sm-9"><input type="text" name="custom_id" class="form-control"
                                            value="$!{consumer.custom_id}">
                 <span class="help-block m-b-none data-custom_id"></span>
               </div>
@@ -116,7 +116,9 @@
       $("span.help-block").html("");
       e.preventDefault();
       $.ajax($(this).attr("action"), {
-        data: $("form.consumer-form").find('input').not('[value=""]').serializeJSON({
+        data: $("form.consumer-form").find(':input').filter(function () {
+          return $.trim(this.value).length > 0
+        }).serializeJSON({
           checkboxUncheckedValue: "false",
           parseBooleans: true
         }),
