--- a/src/main/java/velocity_implicit.vm
+++ b/src/main/java/velocity_implicit.vm
@@ -25,5 +25,7 @@
 #* @vtlvariable name="oAuth2" type="com.blueocn.api.kong.model.Plugin<com.blueocn.api.kong.model.configs.OAuth2Config>" file="../webapp/WEB-INF/views/templates/admin/plugin/oauth2.vm" *#
 #* @vtlvariable name="defaultProvisionKey" type="java.lang.String" file="../webapp/WEB-INF/views/templates/admin/plugin/oauth2.vm" *#
 #* @vtlvariable name="application" type="com.blueocn.api.kong.model.consumers.OAuth2" file="../webapp/WEB-INF/views/templates/oauth2/approval.vm" *#
+#* @vtlvariable name="application" type="com.blueocn.api.kong.model.consumers.OAuth2" file="../webapp/WEB-INF/views/templates/admin/application/edit.vm" *#
+#* @vtlvariable name="consumers" type="java.util.List<com.blueocn.api.kong.model.Consumer>" file="../webapp/WEB-INF/views/templates/admin/application/edit.vm" *#
 
 #* Define macros *#
