--- a/src/main/webapp/WEB-INF/views/templates/admin/api/edit.vm
+++ b/src/main/webapp/WEB-INF/views/templates/admin/api/edit.vm
@@ -15,6 +15,9 @@
 
 <div class="content animate-panel">
   <div class="row">
+    <div class="hpanel col-lg-12">
+      #parse("/fragment/message.vm")
+    </div>
     <div class="col-lg-4">
       <div class="hpanel hgreen">
         <div class="panel-heading">
