--- a/src/main/webapp/WEB-INF/views/templates/admin/application/list.vm
+++ b/src/main/webapp/WEB-INF/views/templates/admin/application/list.vm
@@ -1,3 +1,174 @@
 #set( $pageTitle = "应用列表" )
 #set( $parentMenu = "application" )
 #set( $menuName = "listApplication" )
+
+#set( $pageStyles = [
+  "/assets/vendor/select2/select2.css",
+  "/assets/vendor/select2/select2-bootstrap.css",
+  "/assets/vendor/datatables/css/dataTables.bootstrap.min.css",
+  "/assets/vendor/sweetalert/sweet-alert.css"
+])
+
+#breadCrumb( "应用管理", "编辑保存开发者应用信息, 管理应用.")
+
+<div class="content animate-panel">
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="hpanel">
+        <div class="panel-heading hbuilt">
+          <div class="panel-tools">
+            <a class="showhide"><i class="fa fa-chevron-up"></i></a>
+            <a class="closebox"><i class="fa fa-times"></i></a>
+          </div>
+          应用信息
+        </div>
+        <div class="panel-body">
+          <!-- Search Area -->
+          <div class="row">
+            <form id="applicationForm" action="${rc.contextPath}/admin/application/list" class="form" method="post">
+              <div class="form-group col-sm-6">
+                <label class="col-sm-3 control-label">开发者列表</label>
+                <div class="col-sm-9">
+                  #if( $consumers )
+                  <select class="consumerId form-control" name="consumer_id">
+                    <option></option>
+                    #foreach( ${consumer} in ${consumers} )
+                    <option value="$!{consumer.id}">$!{consumer.username}</option>
+                    #end
+                  </select>
+                  #else
+                    找不到开发者信息, 请刷新页面重试, 或者添加开发者.
+                  #end
+                </div>
+                <div class="hr-line-dashed"></div>
+              </div>
+              <div class="form-group col-sm-6">
+                <label class="col-sm-3 control-label">应用名称</label>
+                <div class="col-sm-9">
+                  <input type="text" class="form-control" name="name" value=""/>
+                </div>
+                <div class="hr-line-dashed"></div>
+              </div>
+              <div class="form-group col-sm-6">
+                <label class="col-sm-3 control-label">Client Id</label>
+                <div class="col-sm-9">
+                  <input type="text" class="form-control" name="client_id" value=""/>
+                </div>
+                <div class="hr-line-dashed"></div>
+              </div>
+              <div class="form-group col-sm-6">
+                <label class="col-sm-3 control-label">Client Secret</label>
+                <div class="col-sm-9">
+                  <input type="text" class="form-control" name="client_secret" value=""/>
+                </div>
+                <div class="hr-line-dashed"></div>
+              </div>
+              <div class="form-group col-sm-6">
+                <label class="col-sm-3 control-label">Redirect Uri</label>
+                <div class="col-sm-9">
+                  <input type="text" class="form-control" name="redirect_uri" value=""/>
+                </div>
+                <div class="hr-line-dashed"></div>
+              </div>
+              <div class="form-group">
+                <div class="col-sm-8 col-sm-offset-4">
+                  <button class="btn btn-success querApi" type="button"><i class="fa fa-check"></i>
+                    查询</span></button>
+                  <button class="btn btn-default reset" type="button"><i class="fa fa-times"></i> 重置
+                  </button>
+                </div>
+              </div>
+            </form>
+          </div>
+          <!-- Data Area -->
+        </div>
+        <div class="panel-body">
+          <table id="apiList" class="table table-striped table-bordered table-hover" width="100%">
+            <thead>
+            <tr>
+              <th>Name</th>
+              <th>Request Host</th>
+              <th>Request Path</th>
+              <th>Upstream Url</th>
+              <th>Preserve Host</th>
+              <th>Strip Request Path</th>
+              <th>Operation</th>
+            </tr>
+            </thead>
+          </table>
+        </div>
+        <div class="panel-footer">
+          &nbsp;
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script src="${rc.contextPath}/assets/vendor/sweetalert/sweet-alert.min.js"></script>
+<!-- Datatable Vendor -->
+<script src="${rc.contextPath}/assets/vendor/datatables/js/jquery.dataTables.min.js"></script>
+<script src="${rc.contextPath}/assets/vendor/datatables/js/dataTables.bootstrap.min.js"></script>
+<script src="${rc.contextPath}/assets/vendor/jquery.serializejson.min.js"></script>
+<script src="${rc.contextPath}/assets/vendor/select2/select2.min.js"></script>
+<script src="${rc.contextPath}/assets/vendor/select2/select2_locale_zh-CN.js"></script>
+<script type="text/javascript">
+  $(".consumerId").select2({
+    placeholder: "请选择你想查询的开发者",
+    allowClear: true
+  });
+  var TableHelper = function() {
+    var loading = function(setting) {
+      console.log($("#" + setting["formId"]).serialize().replace(/[^&]+=\.?(?:&|$)/g, ''));
+      var form = $("#" + setting["formId"]);
+      $.ajax($("#" + setting["formId"]).attr("action"), {
+        data: $("#" + setting["formId"]).serialize().replace(/[^&]+=\.?(?:&|$)/g, ''),
+        method: "post",
+        success: function(data) {
+          setting["data"] = data;
+          console.log(data);
+          tableRender(setting);
+        },
+        error: function() {
+          swal({
+            title: "加载失败 !",
+            text: "请检查页面重新提交 !",
+            type: "warning"
+          });
+        }
+      });
+    };
+
+    var tableRender = function(setting) {
+      setting["dataTable"].destroy();
+      $("#" + setting["tableId"]).html(setting["tableHeader"]);
+      setting["dataTable"] = $("#" + setting["tableId"]).DataTable({
+        fixedHeader: true,
+        data: setting["data"],
+        columns: [
+          { data : "name"},
+          { data : "request_host"},
+          { data : "request_path"},
+          { data : "upstream_url"},
+          { data : "preserve_host"},
+          { data : "strip_request_path"},
+          { data : "id"}
+        ],
+        "columnDefs": [{
+          "render": function (data, type, row) {
+            return "<a href='$!{rc.contextPath}/admin/api/edit/" + data + "'>编辑</a>"
+                + " <a onclick='deleteApi(\"" + data + "\")'>删除</a> <a onclick='"
+                + "swal({title: \"你访问的页面被吃了哦 !\", text:\"_(:з」∠)_\",type: \"error\"})" + "'>插件</a>";
+          },
+          targets: 6
+        }]
+      });
+    };
+
+    return {
+      init: function(setting) {
+        loading(setting);
+      }
+    };
+  }();
+</script>
